# solana_projects

./: README.md
anchor-movie-review-program/: Anchor.toml  README.md
anchor-movie-review-program/programs/anchor-movie-review-program/src/: lib.rs
anchor-movie-review-program/tests/: anchor-movie-review-program.ts
counter/: Anchor.toml  README.md
counter/programs/counter/src/: lib.rs
counter/tests/: counter.ts
first_anchor_project/: Anchor.toml  README.md
first_anchor_project/programs/first_anchor_project/: Cargo.toml
first_anchor_project/programs/first_anchor_project/src/: lib.rs
first_anchor_project/tests/: first_anchor_project.ts
pda-counter/: Anchor.toml  README.md
pda-counter/programs/pda-counter/: Cargo.toml
pda-counter/programs/pda-counter/src/: lib.rs
pda-counter/tests/: pda-counter.ts
student-register/: Anchor.toml  README.md
student-register/programs/student-register/: Cargo.toml
student-register/programs/student-register/src/: lib.rs
student-register/tests/: student-register.ts
